--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,29 @@
-aniso8601==9.0.1
-appdirs==1.4.4
-appnope==0.1.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.5.0
-attrs==20.3.0
-backcall==0.2.0
-bleach==4.1.0
-blis==0.7.9
-boto3==1.17.51
-botocore==1.20.51
-catalogue==2.0.8
-certifi==2020.12.5
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.10
-click==7.1.2
-confection==0.0.3
-cymem==2.0.7
-debugpy==1.5.1
-decorator==5.1.0
-defusedxml==0.7.1
-distlib==0.3.1
-Django==4.0.3
-djangorestframework==3.13.1
-dnspython==2.1.0
-email-validator==1.1.2
-entrypoints==0.3
-filelock==3.0.12
-Flask==1.1.2
-Flask-RESTful==0.3.8
-idna==2.10
-iniconfig==1.1.1
-ipykernel==6.6.0
-ipython==7.30.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-itsdangerous==1.1.0
-jedi==0.18.1
-Jinja2==2.11.3
-jmespath==0.10.0
-jsonschema==4.3.1
-jupyter==1.0.0
-jupyter-client==7.1.0
-jupyter-console==6.4.0
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-langcodes==3.3.0
-MarkupSafe==1.1.1
-matplotlib-inline==0.1.3
-mistune==0.8.4
-murmurhash==1.0.9
-nbclient==0.5.9
-nbconvert==6.3.0
-nbformat==5.1.3
-nest-asyncio==1.5.4
-notebook==6.4.6
-numpy==1.22.0
-packaging==20.9
-pandas==1.3.5
-pandocfilters==1.5.0
-parso==0.8.3
-pathy==0.6.2
-pbr==5.5.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pluggy==0.13.1
-preshed==3.0.8
-prometheus-client==0.12.0
-prompt-toolkit==3.0.24
-psycopg2==2.9.3
-ptyprocess==0.7.0
-py==1.10.0
-pycparser==2.21
-pydantic==1.10.2
-Pygments==2.10.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
-pytest==6.2.3
-pytest-json-report==1.4.1
-pytest-metadata==1.11.0
-pytest-submit @ git+https://github.com/aib-contents/pytest-submit-plugin@b011236541e17ea63810465e26b6a3d1561818b1
-python-dateutil==2.8.1
-pytz==2021.1
-pyzmq==22.3.0
-qtconsole==5.2.2
-QtPy==1.11.3
-requests==2.25.1
-s3transfer==0.3.7
-Send2Trash==1.8.0
-six==1.15.0
-smart-open==5.2.1
-spacy==3.4.2
-spacy-legacy==3.0.10
-spacy-loggers==1.0.3
-sqlparse==0.4.2
-srsly==2.4.5
-stevedore==3.3.0
-terminado==0.12.1
-testpath==0.5.0
-thinc==8.1.5
-toml==0.10.2
-tornado==6.1
-tqdm==4.64.1
-traitlets==5.1.1
-typer==0.4.2
-typing_extensions==4.4.0
-urllib3==1.26.4
-wasabi==0.10.1
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.2
+asgiref==3.7.2
+black==23.7.0
+click==8.1.7
+coverage==7.3.0
+Django==4.2.4
+exceptiongroup==1.1.3
+factory-boy==3.3.0
+Faker==19.3.1
+flake8==6.1.0
+inflection==0.5.1
+iniconfig==2.0.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
+pluggy==1.2.0
+pycodestyle==2.11.0
+pyflakes==3.1.0
+pytest==7.4.0
+pytest-cov==4.1.0
+pytest-django==4.5.2
+pytest-factoryboy==2.5.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+six==1.16.0
+sqlparse==0.4.4
+tomli==2.0.1
+typing_extensions==4.7.1
