--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==23.7.0
 click==8.1.7
 coverage==7.3.0
 Django==4.2.4
+django-htmx==1.16.0
 exceptiongroup==1.1.3
 factory-boy==3.3.0
 Faker==19.3.1
