--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 coverage==7.3.0
 Django==4.2.4
 django-htmx==1.16.0
+django-taggit==4.0.0
 exceptiongroup==1.1.3
 factory-boy==3.3.0
 Faker==19.3.1
